// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputNumber :props :defaultValue, default value 6 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :disabled, function can not be call 1`] = `
<div
  class="t-input-number t-size-m t-is-disabled"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-is-disabled t-input-number-text-align"
      disabled=""
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :format, with 6% 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :max, value 6 < max 10 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :max, value 16 > max 10 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input t-is-error"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :min, value -1 < min 1 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input t-is-error"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase t-is-disabled"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :min, value 6 > min 1 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :mode, without class t-is-controls-right 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :mode:column, with class t-is-controls-right 1`] = `
<div
  class="t-input-number t-size-m t-is-controls-right"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-chevron-down t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-chevron-up t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M509.24008704 256.163392L514.71568448 256.13496384C521.97472 256.74779712 529.06494656 259.82337344 534.628192 265.36222272L534.628192 265.36222272 910.3463808 640.4937536 865.091552 685.7485888 511.99872896 333.24849216 160.00556288 685.7485888 114.75072896 640.4937536 466.75072896 288.06449216 466.72826816 288.00732608 489.35568512 265.37990912C493.52487168 261.22251328 498.55406784 258.45003712 503.87029504 257.06270464L509.24008704 256.163392 509.24008704 256.163392Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :mode:row, without class t-is-controls-right 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :size:large, with class t-size-l 1`] = `
<div
  class="t-input-number t-size-l"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-l"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-l"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :size:medium, with class t-size-m 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :size:small, with class t-size-s 1`] = `
<div
  class="t-input-number t-size-s"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-s"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-s"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :step, 2 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props :value, 6 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;

exports[`InputNumber :props class, with class t-input-number 1`] = `
<div
  class="t-input-number t-size-m"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__decrease"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-remove t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 480L896 480 896 544 128 544Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
  <div
    class="t-input"
  >
    <input
      autocomplete="off"
      class="t-input__inner t-input-number-text-align"
      placeholder=""
    />
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--icon-only t-button--shape-square t-input-number__increase"
    type="button"
  >
    
    
    <svg
      class="t-icon t-icon-add t-size-m"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
        fill-rule="evenodd"
      />
    </svg>
    
    
    
  </button>
</div>
`;
